# fastapi-project

./: .dockerignore  .env  .env.example  .gitignore  LICENSE  README.MD  alembic.ini  app.py  logging_config.json  main.py  mypy.ini  pyproject.toml  requirements.txt  test.py
.github/workflows/: mypy_and_tests.yaml
api/: __init__.py  application.py  config.py
api/endpoints/: oauth.py  products.py  users.py
api/v1/: errors.py  not_for_production.py
api_v1/: __init__.py  application.py  easy_endpoints.py  not_for_production.py
api_v1/endpoints/: basic.py  oauth.py  products.py  testpoint.py  users.py
core/: Untitled Diagram.drawio  __init__.py  config.py  events.py  settings.py
data/: config.py
deployment/: Dockerfile  deploy.sh  docker-compose.yml  fastapi.Dockerfile
deployment/backups/: Dockerfile  dump-database.sh
deployment/k8s/: api-config.yaml  api-deployment.yaml  api-secret.yaml  api-service.yaml  postgresql-backup.yaml  postgresql-deployment.yaml  postgresql-secret.yaml  postgresql-service.yaml  postgresql-volumes.yaml
middlewares/: process_time_middleware.py
migrations/: env.py
migrations/versions/: 49f42a2f90bb_first_migration.py
services/: __init__.py
services/abstracts/: __init__.py  base_api_configurator.py  base_crud.py
services/database/: __init__.py  utils.py
services/db/: __init__.py  base.py  crud.py  models.py  postgresql.py
services/dependencies/: containers.py  redis.py  services.py
services/misc/: __init__.py  bases.py  pydantic_models.py  schemas.py
services/redis/: containers.py  redis.py  services.py
services/utils/: __init__.py  api_installation.py  endpoints_specs.py  format_.py  jwt.py  other.py  responses.py  security.py  wrappers.py
src/: __main__.py  bootstrap.py  main.py
src/api/: __init__.py
src/api/v1/: dto.py  (+1 more)
src/config/: config.py  config.yaml
src/core/: __init__.py  events.py  settings.py
src/middlewares/: process_time_middleware.py
src/resources/: api_string_templates.py
src/utils/: __init__.py  database_utils.py  endpoints_specs.py  exceptions.py  gunicorn_app.py  jwt.py  logging.py  responses.py
src/views/: __init__.py  home.py
tests/: conftest.py
tests/test_api/: test_oauth.py  test_products.py  test_testpoint.py  test_users.py
tests/test_services/: test_jwt.py
views/: api.py  exception_handlers.py  home.py
(+66 files in other folders)
