[tool.poetry]
name = "fast_api_test"
version = "0.1.0"
description = ""
authors = ["Gleb Garanin <glebgar567@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
ujson = "^4.0.2"
fastapi = "^0.68.0"
pydantic = "^1.8.2"
email-validator = "^1.1.3"
Jinja2 = "^3.0.1"
PyYAML = "^5.4.1"
python-multipart = "^0.0.5"
graphene = "^2.1.9"
glqiwiapi = "^1.0.3"
asyncpg = "^0.24.0"
loguru = "^0.5.3"
environs = "^9.3.2"
uvloop = "^0.16.0"
SQLAlchemy = "^1.4.22"
aioredis = "^2.0.0"
passlib = "^1.7.4"
bcrypt = "^3.2.0"
python-jose = "^3.3.0"
fastapi_jinja = { git = "https://github.com/AGeekInside/fastapi-jinja.git", branch = "main" }
sqlalchemy-stubs = "^0.4"
sqlalchemy2-stubs = "^0.0.2a8"
manage-fastapi = "^1.0.1"

[tool.poetry.dev-dependencies]
alembic = "^1.6.5"
pytest = "^6.2.4"
pytest-asyncio = "^0.15.1"
pytest-cov = "^2.12.1"
black = { version = "^21.6b0", python = ">=3.6" }
mypy = { extras = ["plugin"], version = "^0.910" }
timeout-decorator = "^0.5.0"
flake8 = "^3.9.2"
asynctest = "^0.13.0"
async-timeout = "^3.0.1"
pytest-aiohttp = "^0.3.0"
asgi-lifespan = "^1.0.1"
gunicorn = "^20.1.0"
httpx = "^0.18.2"
uvicorn = "^0.15.0"
pytest-mock = "^3.6.1"
nest-asyncio = "^1.5.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
